First person controls are clamped and added physics (character & environment)
Signed-off-by: notrodash <n@notr.co>

--- a/p2pentry/web/p2pentry.html
+++ b/p2pentry/web/p2pentry.html
@@ -9,9 +9,10 @@
   <body>
     <h1>P2pentry</h1>
     
-    <canvas id="game" width="800" height="500"></canvas>
+    <canvas id="game" width="1100" height="800"></canvas>
 
     <script type="application/javascript" src="js/three.min.js"></script>
+    <script type="application/javascript" src="js/physi.js"></script>
     <script type="application/dart" src="dart/p2pentry.dart"></script>
     <script src="packages/browser/dart.js"></script>
   </body>
