Made player controller third person and player is now a ball. Started implementing lighting. Next up will be the pipes and funnels.
Signed-off-by: notrodash <n@notr.co>

--- a/p2pentry/web/p2pentry.html
+++ b/p2pentry/web/p2pentry.html
@@ -13,7 +13,7 @@
 
     <script type="application/javascript" src="js/three.min.js"></script>
     <script type="application/javascript" src="js/physi.js"></script>
-    <script type="application/dart" src="dart/p2pentry.dart"></script>
+    <script type="application/dart" src="dart/entry.dart"></script>
     <script src="packages/browser/dart.js"></script>
   </body>
 </html>
