Restored p2entry.html
Signed-off-by: notrodash <n@notr.co>

--- a/p2pentry/web/p2pentry.html
+++ b/p2pentry/web/p2pentry.html
@@ -13,8 +13,8 @@
 
     <script type="application/javascript" src="js/three.min.js"></script>
     <script type="application/javascript" src="js/physi.js"></script>
-    <!--script type="application/dart" src="dart/entry.dart"></script-->
-    <script src="packages/browser/dart.js"></script>
-    <script type="application/javascript" src="dart/entry.dart.precompiled.js"></script>
+    <script type="application/dart" src="dart/entry.dart"></script>
+    <!--script src="packages/browser/dart.js"></script>
+    <script type="application/javascript" src="dart/entry.dart.precompiled.js"></script-->
   </body>
 </html>
