Added more pipes to the level, added reset option for player, world start/ finish coordinates are now stored in the world.
Signed-off-by: notrodash <n@notr.co>

--- a/p2pentry/web/p2pentry.html
+++ b/p2pentry/web/p2pentry.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="css/p2pentry.css">
   </head>
   <body>
-    <h1>P2pentry</h1>
+    <h1>Niklas' Ball Game Thingy (Work in progress!)</h1>
     
     <canvas id="game" width="1100" height="800"></canvas>
+    <br/>W A S D to move the ball, Space to jump. Move the mouse to control the view and scroll to zoom. Enter to reset the player.
 
     <script type="application/javascript" src="js/three.min.js"></script>
     <script type="application/javascript" src="js/physi.js"></script>
